# gmx-md-prepper

./: README.md  pyproject.toml
src/gmx-md-prepper/: gmp.py
src/gmx_md_prepper/: cli.py
