[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gmx_md_prepper"
version = "0.0.1"
requires-python = ">=3.7"
authors = [
    {name = "Krzysztof Czołczyński"}
]
description = "An automatic preparator for MD, using GROMACS"
readme = "README.md"
keywords = ["gromacs", "molecular dynamics"]
license = {text = "GPL-3.0-only"}
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.scripts]
test = "gmx_md_prepper.gmp:test"
